--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,11 @@
   </head>
 
   <body>
+    <% if logged_in? %>
+      <%= render 'shared/logined_header' %>
+    <% else %>
+      <%= render 'shared/header' %>
+    <% end %>
     <%= yield %>
   </body>
 </html>
